@@ -1,0 +1,11 @@
+config.c
+config.h
+CHANGELOG
+COPYRIGHT
+LICENSE
+restartd.c
+Makefile
+restartd.8
+restartd.conf
+restartd.fr.8
+version
